src/index.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@400;600&family=Poppins:wght@100;300;400;500;600;700&family=Source+Sans+Pro:wght@400;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;
:root {
  font-family: 'Poppins';
  line-height: 1.5;
  font-weight: 400;

  width: 100%;
  height: 100%;

  margin: 0;
  padding: 0;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  width: auto;
  max-width: none;
  height: auto;
}

.a {
  font-weight: 500;
  color: rgb(255, 59, 92);
  text-decoration: none;
}

a:hover {
  color: rgb(255, 59, 92);
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  justify-content: center;
  min-width: 320px;
  min-height: 100%;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  /* background-color: #1a1a1a; */
  cursor: pointer;
  transition: border-color 0.25s;
  justify-items: center;
  align-content: center;
  justify-content: center;
  align-self: center;
}

button:hover {
  border-color: #9b9b9b;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }

  a:hover {
    color: rgb(255, 59, 92);
    text-decoration: none;
  }
}

.MuiList-root {
  background: transparent !important;
  padding: 0% !important;
  width: 100% !important;
  height: 100% !important;
}
.MuiButtonBase-root {
  width: 100% !important;
  height: 100% !important;
  background: transparent !important;
}
.MuiButtonBase-root span {
  width: 100% !important;
  height: 100% !important;
  background: transparent !important;
}

/* .slick-track {
  height: 100% !important;
} */
video::-webkit-media-controls-fullscreen-button {
  display: none;
}
video::-webkit-media-controls-overflow-button {
  display: none !important;
}

.baseRegular {
  /* //styleName: Base/Regular; */
  font-family: Poppins;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  text-align: left;
  color: #848484;
}

.baseMedium {
  /* //styleName: Base/Medium; */
  font-family: Poppins;
  font-size: 16px;
  font-weight: 500;
  line-height: 19.2px;
  text-align: center;
  color: #222222;
}

.goldCoin {
  width: 16px;
  height: 16px;
  gap: 0px;
  opacity: 0px;
}

.pointer {
  cursor: pointer;
}

[type='search']::-webkit-search-cancel-button {
  -webkit-appearance: none;
  appearance: none;
  height: 25px;
  width: 25px;
  cursor: pointer;
  background-size: 25px 25px;
  background-image: url('./assets/crossIcon.svg');
}

.ant-modal-root {
  position: fixed !important;
  inset: 0;
  z-index: 100000;
  overflow: auto;
  outline: 0;
  -webkit-overflow-scrolling: touch;
}

/* Apply styles to the globally-scoped renamed class */
:global(.renamed-ant-modal-root) {
  /* Add your custom styles here */
  position: fixed;
  z-index: 1600; /* Adjust the z-index value as needed */
}

/* Hide the video spinner */
video::-webkit-media-controls-loading-spinner {
  display: none; /* Chrome/Safari */
}

video::-moz-media-controls-loading-spinner {
  display: none; /* Firefox */
}

video::-ms-media-controls-loading-spinner {
  display: none; /* Internet Explorer */
}

/* Fallback */
video {
  background: none; /* Ensure no default background */
}

/* Add a custom spinner */
video {
  position: relative;
}

video::after {
  content: ' ';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 40px;
  height: 40px;
  border: 4px solid rgba(0, 0, 0, 0.1);
  border-radius: 50%;
  border-top: 4px solid #000;
  animation: spin 1s linear infinite;
  transform: translate(-50%, -50%);
  display: none; /* Initially hide custom spinner */
}

video.loading::after {
  display: block; /* Show spinner when video is loading */
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.emoji-picker-container {
  position: absolute;
  top: 60px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1000;
  background-color: white;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
}

.emoji-picker{
  display: flex;
  flex-wrap: wrap;
  padding: 10px;
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}
.no-scrollbar {
  -ms-overflow-style: none;  
  scrollbar-width: none; 
}

.infinite-scroll-component__outerdiv{
  width: 100%;
}

*::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

*::-webkit-scrollbar-track {
  background: var(--scrollbar-track-color, #f0f0f0); 
  border-radius: 4px;
}

*::-webkit-scrollbar-thumb {
  background-color: var(--scrollbar-thumb-color, #a0a0a0);
  border-radius: 4px;
  border: 2px solid transparent;
  background-clip: content-box;
}

.track-0 {
  background-color: #f50057;
}

.thumb-0 {
  background-color: #a0a0a0;
}

.track-1 {
  background-color: #f0f0f0;
}

.Toastify__toast-body div {
  color: #000 !important;
}

/* chat module play video btn css start  */

a.customPlayBtn {
  display: block;
  width: 30px;
  height: 30px;
  background-color: #e1434b;
  border-radius: 100%;
  border: #fff solid 1px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  animation: shadowPulse 1s infinite linear;
}

a.customPlayBtn::before {
  position: absolute;
  content: '';
  border-top: transparent 5.625px solid;
  border-bottom: transparent 5.625px solid;
  border-left: #fff 9.375px solid;
  top: 50%;
  left: 50%;
  transform: translate(-40%, -50%);
}

a.customPlayBtn::after {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  /* border: #fff solid 2px; */
  border-radius: 100%;
  animation: ringPulse 1s infinite linear;
}

@keyframes ringPulse {
  0% {
      opacity: 0;
      transform: scale(0.95);
  }

  10% {
      opacity: 1;
  }

  80%, 100% {
      opacity: 0;
      transform: scale(2);
  }
}

@keyframes shadowPulse {
  0% {
      box-shadow: 0 0 3px 2.25px transparent,
                  0 0 0 0 transparent,
                  0 0 0 0 transparent;
  }

  10% {
      box-shadow: 0 0 3px 2.25px #e1434b,
                  0 0 4.5px 3.75px transparent,
                  0 0 4.5px 1.875px #e1434b;
  }

  80%, 100% {
      box-shadow: 0 0 3px 2.25px transparent,
                  0 0 0 15px transparent,
                  0 0 0 15px transparent;
  }
}

/* chat module play video btn css end  */


.slider-container {
  position: relative;
  width: 80%;
  margin: auto;
}

.custom-prev,
.custom-next {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  color: #fff;
  border: 1px solid white;
  border-radius: 50%;
  padding: 10px;
  cursor: pointer;
  z-index: 1;
}

.custom-prev {
  left: -50px;
}

.custom-next {
  right: -50px;
}

.custom-prev:hover,
.custom-next:hover {
  background-color: #e1434b;
}

/* #HomeMediaContainer .infinite-scroll-component__outerdiv {
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
  height: 100vh;
} */

